Still working on overflow issue

--- a/style.CSS
+++ b/style.CSS
@@ -134,7 +134,7 @@ a{
     margin: 10px auto;    
 }
 
-#copyright{
+copyright{
     margin-left: 20px;
     text-align: left;
 }
